--- a/server.properties
+++ b/server.properties
@@ -1,50 +1,51 @@
 #Minecraft server properties
-#Mon May 25 03:37:05 UTC 2020
-enable-jmx-monitoring=false
-rcon.port=25575
-level-seed=
-gamemode=survival
-enable-command-block=false
-enable-query=false
-generator-settings=
-level-name=world
-motd=\u00A74\u00A7l\u00A7oAsadito Server\u00A7r\n\u00A71Con\u00A7e\u00A7l\u00A7o estilo\u00A71 y\u00A7e\u00A7l\u00A7o elegancia\u00A71 para\u00A7e\u00A7l\u00A7o toda\u00A71 la\u00A7e\u00A7l\u00A7o vagancia\u00A71.
-query.port=25565
-pvp=true
-generate-structures=true
-difficulty=easy
-network-compression-threshold=256
-max-tick-time=60000
-max-players=20
-use-native-transport=true
-online-mode=false
-enable-status=true
-allow-flight=false
-broadcast-rcon-to-ops=true
-view-distance=10
-max-build-height=256
-server-ip=
-allow-nether=true
-server-port=25565
-enable-rcon=false
-sync-chunk-writes=true
-op-permission-level=4
-prevent-proxy-connections=false
-resource-pack=
-entity-broadcast-range-percentage=100
-rcon.password=
-player-idle-timeout=0
-force-gamemode=false
-hardcore=false
-white-list=false
-broadcast-console-to-ops=true
-spawn-npcs=true
-spawn-animals=true
-snooper-enabled=true
-function-permission-level=2
-level-type=default
-spawn-monsters=true
-enforce-whitelist=false
-resource-pack-sha1=
+#Sat Oct 10 00:15:52 UTC 2020
 spawn-protection=16
+max-tick-time=60000
+query.port=25565
+generator-settings=
+sync-chunk-writes=true
+force-gamemode=false
+allow-nether=true
+enforce-whitelist=false
+gamemode=survival
+broadcast-console-to-ops=true
+enable-query=false
+player-idle-timeout=0
+difficulty=easy
+spawn-monsters=true
+broadcast-rcon-to-ops=true
+op-permission-level=4
+pvp=true
+snooper-enabled=true
+entity-broadcast-range-percentage=100
+level-type=default
+hardcore=false
+enable-status=true
+enable-command-block=false
+max-players=20
+network-compression-threshold=256
 max-world-size=29999984
+resource-pack-sha1=
+function-permission-level=2
+rcon.port=25575
+server-port=25565
+server-ip=
+spawn-npcs=true
+allow-flight=false
+level-name=world
+view-distance=10
+resource-pack=
+spawn-animals=true
+white-list=false
+rcon.password=
+generate-structures=true
+online-mode=false
+max-build-height=256
+level-seed=
+prevent-proxy-connections=false
+use-native-transport=true
+enable-jmx-monitoring=false
+rate-limit=0
+motd=\u00A74\u00A7l\u00A7oAsadito Server\u00A7r\n\u00A71Con\u00A7e\u00A7l\u00A7o estilo\u00A71 y\u00A7e\u00A7l\u00A7o elegancia\u00A71 para\u00A7e\u00A7l\u00A7o toda\u00A71 la\u00A7e\u00A7l\u00A7o vagancia\u00A71.
+enable-rcon=false
